# using_cmake

./: README.md
MyOpenCV/lib/opencv31/mac/lib/Debug/: libopencv_calib3d.3.1.0.dylib  libopencv_features2d.3.1.0.dylib  libopencv_flann.3.1.0.dylib  libopencv_highgui.3.1.0.dylib  libopencv_imgcodecs.3.1.0.dylib  libopencv_ml.3.1.0.dylib  libopencv_objdetect.3.1.0.dylib  libopencv_photo.3.1.0.dylib  libopencv_shape.3.1.0.dylib  libopencv_stitching.3.1.0.dylib  libopencv_superres.3.1.0.dylib  libopencv_video.3.1.0.dylib  libopencv_videoio.3.1.0.dylib  libopencv_videostab.3.1.0.dylib
MyOpenCV/lib/opencv31/win_x64/lib/Debug/: opencv_core310d.lib  opencv_highgui310d.lib  opencv_imgcodecs310d.lib
MyOpenCV/src/: CMakeLists.txt  MyExample.cpp  MyExample.hpp  main.cpp
example/src/: CMakeLists.txt
